--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <parent>
     <groupId>org.cloudhoist</groupId>
     <artifactId>pallet-crate-pom</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.2-SNAPSHOT</version>
+    <relativePath/>
   </parent>
   <artifactId>zookeeper</artifactId>
   <version>0.7.0-SNAPSHOT</version>
@@ -19,15 +20,9 @@
     <dependency>
       <groupId>org.cloudhoist</groupId>
       <artifactId>java</artifactId>
+      <version>0.7.0</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <!-- make sure we can find the parent pom -->
-  <repositories>
-    <repository>
-      <id>sonatype</id>
-      <url>http://oss.sonatype.org/content/repositories/releases</url>
-    </repository>
-  </repositories>
 </project>
